2006-05-09  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/tweaking.itely, advanced-notation.itely:
	backport from 2.9.

2006-05-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* flower/file-name.cc: add unistd.h

	* scm/define-grob-properties.scm (all-internal-grob-properties):
	readd chord-tremolo.

2006-05-09  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/changing-defaults.itely: oops, \item -> @item.
	Also general editing.

2006-05-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/GNUmakefile: remove pfa download stuff.

	* stepmake/aclocal.m4: use python-config for x-compile flags. Backport.

	* scripts/lilypond-book.py (do_process_cmd): backport: create .png
	for html files. Backport.

	* scm/framework-ps.scm (write-preamble): use mac-font? even if
	gs-font-load is set. Backport.

	* mf/feta-bolletjes.mf: fix attachment of triangle head. backport.

	* mf/GNUmakefile ($(NCSB_OTFS)): backport: gen and install OTF
	files, new NCSB dir handling.  backport.

	* lily/music-sequence.cc (maximum_length): backport robustness fix.

	* input/tutorial/GNUmakefile (EXTRA_DIST_FILES): dist html file too.

	* configure.in (LINK_GXX_STATICALLY): new --with-ncsb-dir. (backport)

	* config.make.in: NCSB_SOURCE_FILES

	* flower/include/std-vector.hh:
	(default_compare): backport: use only 1 compare optor.

2006-05-07  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ all: backport everything from 2.9 docs.

	* Documentation/user/ README.txt, working.itely, tweaks.itely:
	new files, backported from 2.9.

2006-05-04  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/baer-flat-bw.png: backport remove alpha
	channel	to permit printing on windows.

2006-05-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): bump version.

	* lily/relocate.cc (setup_paths): backport relocation file stuff
	from 2.9.

2006-04-17  Erlend Aasland  <erlenda@gmail.com>

	* scm/define-grobs.scm: backport stem-attachment fix for tablature